--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NGINX_EXPOSED_PORT=8080
+MYSQL_EXPOSED_PORT=33060
